--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://mortonprod.github.io/profile-react",
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-helmet": "^5.1.3"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
